<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/menu_blackboard"
            android:icon="@drawable/ic_assignment_grey600_24dp"
            android:title="@string/blackboard"
            />
        <item
            android:id="@+id/menu_timetable"
            android:icon="@drawable/ic_view_week_grey600_24dp"
            android:title="@string/timetable"
            />
        <item
            android:id="@+id/menu_roomsearch"
            android:icon="@drawable/ic_search_grey600_24dp"
            android:title="@string/roomsearch"
            />

        <item
            android:id="@+id/menu_presence"
            android:icon="@drawable/ic_people_grey600_24dp"
            android:title="@string/presence"
            />

        <item
            android:id="@+id/menu_subheader_externals"
            android:title="@string/others">

            <menu>
                <item
                    android:id="@+id/menu_food"
                    android:icon="@drawable/ic_local_restaurant_grey600_24dp"
                    android:title="@string/food"
                    />

                <item
                    android:id="@+id/menu_jobs"
                    android:icon="@drawable/ic_work_grey600_24dp"
                    android:title="@string/work_offer"
                    />

                <item
                    android:id="@+id/menu_mvv"
                    android:icon="@drawable/ic_directions_transit_grey600_24dp"
                    android:title="@string/mvv"
                    />
            </menu>

        </item>

        <item
            android:id="@+id/menu_info"
            android:icon="@drawable/ic_info_outline_grey600_24dp"
            android:title="@string/info"
            />

        <item
            android:id="@+id/menu_feedback"
            android:icon="@drawable/ic_local_post_office_grey600_24dp"
            android:title="@string/help_feedback"
            />
    </group>
</menu>