<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewFS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#555555" />
    
    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_below="@id/textViewFS"
        android:layout_centerHorizontal="true"
        android:text="@string/version"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#555555" />

    <TextView
        android:id="@+id/textViewTeamMembers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewVersion"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:text="@string/teamMembers" />

    
    <TextView
        android:id="@+id/textViewMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:autoLink="web"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:onClick="openMail"
        android:text="@string/fs_contact"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000055" />

</RelativeLayout>