<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:drawableLeft="@drawable/ic_action_download"
        android:drawablePadding="5dp"
        android:padding="15dp"
        android:text="@string/courses"
        android:textColor="#ffff4444"
        android:textSize="22sp"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/header"
        android:background="#ffff4444"/>

    <ListView
        android:id="@+id/listCourses"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons"
        android:layout_below="@+id/header"
        android:overScrollMode="never">
    </ListView>

    <RelativeLayout
        android:id="@id/buttons"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:background="@drawable/divider_horizontal_bright"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/negativeButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/holo_light_red_list_selector_holo_light"
                android:text="@android:string/cancel"
                android:textSize="14sp"
                android:textColor="@color/holo_light_red_dialog_text"/>

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="@drawable/divider_horizontal_bright"/>

            <Button
                android:id="@+id/neutralButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/holo_light_red_list_selector_holo_light"
                android:text="@string/neu"
                android:textSize="14sp"
                android:textColor="@color/holo_light_red_dialog_text"/>

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="@drawable/divider_horizontal_bright"/>

            <Button
                android:id="@+id/positiveButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/holo_light_red_list_selector_holo_light"
                android:text="@string/add"
                android:textSize="14sp"
                android:textColor="@color/holo_light_red_dialog_text"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>